<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.2"
            tools:layout_editor_absoluteX="-16dp">

            <TextView
                android:id="@+id/login_tvSignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_signin"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/login_tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_loginError"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"
                tools:visibility="visible"
                android:textColor="@color/red"
                android:paddingBottom="15dp"
                />

            <EditText
                android:id="@+id/login_etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/etUsername"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/etPassword"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/hollow_background"
                android:fontFamily="sans-serif-black"
                android:text="@string/login_btnLogin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:drawableEnd="@drawable/ic_login"
                android:layout_margin="10dp"
                />

            <Button
                android:id="@+id/btn_gotoRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/hollow_background"
                android:fontFamily="sans-serif-black"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:drawableEnd="@drawable/ic_signup"
                android:text="@string/login_btnSignup"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo"
                tools:ignore="MissingConstraints"
                />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            android:src="@drawable/ic_settings"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>