<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_background">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-28dp">

        <LinearLayout
            android:id="@+id/llContactBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/turquoise"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivFriendPic"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/icon_user_default"
                tools:ignore="NestedWeights"/>

            <TextView
                android:id="@+id/tvFriendNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/etNickname"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="Nickname" />
        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/messageRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/llInput"
            app:layout_constraintTop_toBottomOf="@+id/llContactBar">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lvMessageList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/llInput"
                app:layout_constraintTop_toBottomOf="@+id/llContactBar"
                tools:listitem="@layout/left_message"
                />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <LinearLayout
            android:id="@+id/llInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:id="@+id/etTextInput"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="13"
                android:ems="10"
                android:hint="@string/etTypeMessage"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:background="@drawable/input_frame"/>

            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_margin="10dp"
                android:background="@drawable/hollow_background"
                android:drawableEnd="@drawable/ic_send"
                android:fontFamily="sans-serif-black"
                android:text="@string/etSend"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>